Continued work on the game logic.

--- a/hangman/index.html
+++ b/hangman/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Hangman</h1>
     <p>Press any key to get started!</p>
-    <p>Guesses Left: <span>0</span></p>
-    <p>Letters Guessed: <span>0</span></p>
-    <p>Wins: <span>0</span></p>
-    <p>Losses: <span>0</span></p>
+    <p>Guesses Left: <span id="guessesLeft">0</span></p>
+    <p>Letters Guessed: <span id="lettersGuessed">0</span></p>
+    <p>Wins: <span id="wins">0</span></p>
+    <p>Losses: <span id="losses">0</span></p>
     <script src="./app.js"></script>
 </body>
 </html>
